# AutonomousFramework

./: MM_Rover_Controller.launch  demo1_VirEnv.launch  demo1_VirtualHeading.launch  demo1_mode0.launch  demo1_mode1.launch  demo1_mode1_NO_ARDUINO.launch  demo1_mode1_SORTER.launch  demo1_mode2.launch  demo2_mode1.launch  demo3_VirtualHeading.launch  demo3_mode0.launch  demo3_mode1.launch  demo3_mode1_NoArduino.launch  demo3_mode2.launch  demo4_mode1.launch  demo5_CONTROLLER.launch  demo5_ON_ROVER.launch  demo5_PLAN.launch  demo5_PLAN_2.launch  demo_LineFollow_Controller.launch  demo_dumbdumb.launch  demo_multiRover_VirANDPhy.launch  ntiana  ntiana.pub  parent_comm.zi  testingOl.launch  thesisDemo.launch  thesisDemoLaunchV2.launch  thesisDemoV2Fol.launch  thesisLaunchMultViz.launch
BoeingLaunchFiles/: BoeingDemo_Augmented.launch  BoeingDemo_FullyPhysical.launch  BoeingDemo_FullyVirtual.launch  BoeingDemo_MultiRover.launch  BoeingDemo_MultiRover_ALL.launch  BoeingDemo_MultiRover_ON_ROVER.launch  BoeingDemo_RoverAugmented.launch  MM_BoeingDemo_Augmented.launch  MM_BoeingDemo_FullyPhysical.launch  MM_BoeingDemo_FullyVirtual.launch  MM_BoeingDemo_MultiRover.launch  MM_BoeingDemo_RoverAugmented.launch
commandMessage/: CMakeLists.txt  package.xml
commandMessage/include/: CommandMessage.h
commandMessage/src/: CommandMessage.cpp
demo4_detection_combiner/: CMakeLists.txt  package.xml
demo4_detection_combiner/include/: DetectionCombiner.h
demo4_detection_combiner/src/: DetectionCombiner.cpp
demo4_planner/: CMakeLists.txt  package.xml
demo4_planner/include/: Distribution.h  Planner.h
demo4_planner/src/: Distribution.cpp  Planner.cpp
demo4_planner/src/Untitled Folder/: Planner.bk2.cpp2  Planner.cpp.bk
demo4_rover_sim/: CMakeLists.txt  package.xml
demo4_rover_sim/config/: parameters.xml
demo4_rover_sim/include/: RoverSim.h
demo4_rover_sim/src/: RoverSim.cpp
demo4_virtual_env/: CMakeLists.txt  package.xml
demo4_virtual_env/include/: Env.h  Vehicle.h
demo4_virtual_env/src/: Env.cpp
demo4_viz/: CMakeLists.txt  package.xml
demo4_viz/config/: parameters.xml
demo4_viz/include/: main_window.h  plot_app.h
demo4_viz/src/: main_window.cpp  plot_app.cpp
demo4_wheels_splitter/: CMakeLists.txt  package.xml
demo4_wheels_splitter/include/: WheelSplitter.h
demo4_wheels_splitter/src/: WheelSplitter.cpp
demo5_rover_controller/: CMakeLists.txt  package.xml
demo5_rover_controller/config/: parameters.xml
demo5_rover_controller/include/: RoverController.h
demo5_rover_controller/src/: RoverController.cpp
demo_PID_Controller/: CMakeLists.txt  package.xml
demo_PID_Controller/config/: parameters.xml
demo_PID_Controller/include/: PIDController.h
demo_PID_Controller/src/: AppMain.cpp  PIDController.cpp
demo_basic_node/: CMakeLists.txt  package.xml
demo_basic_node/include/: BasicNode.h
demo_basic_node/src/: BasicNode.cpp
demo_clock_library/include/: Clock.h
demo_clock_library/src/: Clock.cpp
demo_combiner/: CMakeLists.txt  package.xml
demo_combiner/include/: Combiner.h
demo_combiner/src/: Combiner.cpp
demo_detected_object/: CMakeLists.txt  package.xml
demo_detected_object/include/: DetectedObject.h
demo_detected_object/src/: DetectedObject.cpp
demo_dumb_controller/: CMakeLists.txt  package.xml
demo_dumb_controller/include/: RoverController.h
demo_dumb_controller/src/: RoverController.cpp
demo_encoder_observer/: CMakeLists.txt  package.xml
demo_encoder_observer/include/: BasicNode.h
demo_encoder_observer/src/: BasicNode.cpp
demo_float_sorter/: CMakeLists.txt  package.xml
demo_float_sorter/include/: Sorter.h
demo_float_sorter/src/: Sorter.cpp
demo_heading_combiner/: CMakeLists.txt  package.xml
demo_heading_combiner/include/: HeadingCombiner.h
demo_heading_combiner/src/: AppMain.cpp  HeadingCombiner.cpp
demo_line_follow_controller/: CMakeLists.txt  package.xml
demo_line_follow_controller/config/: parameters.xml
demo_location_combiner/: CMakeLists.txt  package.xml
demo_location_object/: CMakeLists.txt  package.xml
demo_node/: CMakeLists.txt  package.xml
demo_plot_objects_qt/: CMakeLists.txt  package.xml
demo_point_object/: CMakeLists.txt  package.xml
demo_range_combiner/: CMakeLists.txt  package.xml
demo_sense_objects/: CMakeLists.txt  package.xml
demo_sense_plot_dynamic/: CMakeLists.txt  mainpage.dox  package.xml
demo_sense_plot_dynamic/config/: parameters.xml
demo_sense_plot_dynamic/include/: main_window.h  qcustomplot.h  qt_app.h
demo_sense_plot_dynamic/src/: main_window.cpp  qcustomplot.cpp  qt_app.cpp
demo_sense_plot_qt/: CMakeLists.txt  package.xml
demo_sensor_model/: CMakeLists.txt  package.xml
demo_splitter/: CMakeLists.txt  package.xml
demo_virtual_env/: CMakeLists.txt  package.xml
demo_virtual_env_PID/: CMakeLists.txt  package.xml
demo_virtual_heading/: CMakeLists.txt  package.xml
demo_wheel_action/: CMakeLists.txt  package.xml
encoder_sim/: CMakeLists.txt  package.xml
testASSubs/: CMakeLists.txt  package.xml
testBluetooth/: CMakeLists.txt  package.xml
test_comm_basic/: CMakeLists.txt  package.xml
test_lidar/: CMakeLists.txt  package.xml
thesisDemoEnv/: CMakeLists.txt  package.xml
thesisDemoEnv2/: CMakeLists.txt  package.xml
thesisDemoEnv3/: CMakeLists.txt  package.xml
thesisDemoEnv3/include/: Env.h  Vehicle.h
thesisDemoEnv3/src/: AppMain.cpp  Env.cpp
thesisDemoFollower/: CMakeLists.txt  package.xml
thesisDemoFollower/include/: ThesisDemoFollower.h
thesisDemoFollower/src/: AppMain.cpp  ThesisDemoFollower.cpp
thesisDemoLeader/: CMakeLists.txt  package.xml
thesisDemoViz/: CMakeLists.txt  package.xml
thesisDemoViz/include/: main_window.h  plot_app.h
thesisDemoViz/src/: main_window.cpp  plot_app.cpp
thesisDemoViz2/: CMakeLists.txt  package.xml
thesisDemoViz3/: CMakeLists.txt  package.xml
thesisDemoViz3/include/: main_window.h  plot_app.h
thesisDemoViz3/src/: plot_app.cpp
thesisRviz/: CMakeLists.txt  package.xml
thesisRviz/include/: thesisRviz.h
thesisRviz/src/: thesisRviz.cpp
wheelsMessage/: CMakeLists.txt  package.xml
(+67 files in other folders)
