<?xml version="1.0"?>
<package>
  <name>demo_sense_plot_dynamic</name>
  <version>0.1.0</version>
  <description>

     demo_sense_plot_dynamic

  </description>
  <maintainer email="infester22@gmail.com">infester22</maintainer>
  <author>infester22</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>demo_node</build_depend>
  <run_depend>demo_node</run_depend>
  <build_depend>demo_float_object</build_depend>
  <run_depend>demo_float_object</run_depend>
 
</package>
